--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,10 @@
 @custom-variant dark (&:is(.dark *));
 
 :root {
-  --background: hsl(0 0% 100%);
-  --foreground: hsl(0 0% 3.9%);
+  --background: 215 28% 17%;
+  --foreground: 0 0% 100%;
+  --primary: 324 100% 50%;
+
   --card: hsl(0 0% 100%);
   --card-foreground: hsl(0 0% 3.9%);
   --popover: hsl(0 0% 100%);
@@ -33,8 +35,9 @@
 }
 
 .dark {
-  --background: hsl(0 0% 3.9%);
-  --foreground: hsl(0 0% 98%);
+  --background: 215 28% 17%;
+  --foreground: 0 0% 100%;
+  --primary: 324 100% 50%;
   --card: hsl(0 0% 3.9%);
   --card-foreground: hsl(0 0% 98%);
   --popover: hsl(0 0% 3.9%);
